--- a/chejing/pages/chejing/index.wxml
+++ b/chejing/pages/chejing/index.wxml
@@ -5,22 +5,22 @@
 </view>
 
 <view id="photo">
-  <image src="/image/jerry.jpg" class="photo"></image>
+  <image src="{{userInfo.avatarUrl}}" class="photo"></image>
 </view>
 
 <view id="button">
-  <button id="cj_ramdom" class="weui-btn" type="primary" bindtap="getChejing">点 我</button>
+  <button id="cj_ramdom" class="weui-btn" type="primary" bindtap="getChejing">戳一下</button>
 </view>
 
 <view id="content">
   <view class="content">
-    <text>{{chejing}}</text>
+    <text>{{content}}</text>
     <view id="lidan">
-      <text> from：李诞 《扯经》 </text>
+      <text> from：{{origin}} </text>
     </view>
   </view>
 </view>
 
-<view id="footer">
+<!-- <view id="footer">
   <view class="weui-footer__text"> - Copyright:@朱七七 - </view>
-</view>
+</view> -->
