--- a/chejing/pages/index/index.wxss
+++ b/chejing/pages/index/index.wxss
@@ -1,8 +1,23 @@
 /**index.wxss**/
+
+page{
+  height:100%;
+}
+
+.background {
+  width: 70%;
+  height: 70%;
+  position:fixed; 
+  top:330rpx;
+  background-size:100% 100%;
+  z-index: -1; 
+}
+
 .userinfo {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top:-100rpx;
 }
 
 .userinfo-avatar {
@@ -17,5 +32,5 @@
 }
 
 .usermotto {
-  margin-top: 200px;
+  margin-top: 20px;
 }
