--- a/chejing/pages/chejing/index.wxml
+++ b/chejing/pages/chejing/index.wxml
@@ -5,7 +5,8 @@
 </view>
 
 <view id="photo">
-  <image src="{{userInfo.avatarUrl}}" class="photo"></image>
+  <image wx:if="{{!hasUserInfo}}" src="../../image/jerry.jpg" class="photo"/>
+  <image wx:else src="{{userInfo.avatarUrl}}" class="photo"/>
 </view>
 
 <view id="button">
