--- a/chejing/pages/chejing/index.wxss
+++ b/chejing/pages/chejing/index.wxss
@@ -24,6 +24,39 @@
   background-color: rgba(199, 200, 201, 0.288);  
 }
 
+#buttons{
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  margin-block-start: 50rpx;
+  margin-right: 60rpx;
+}
+
+.button-img{
+  width: 45rpx;
+  height: 45rpx;
+  margin-right: 60rpx;
+  margin-bottom: 40rpx;
+}
+
+.button-img-long{
+  width: 90rpx;
+}
+
+.comments-view{
+  width: 80%;
+  padding: 10rpx 30rpx !important;
+  margin-left: 30rpx;
+}
+
+.comment-content{
+  font-size: small;
+}
+
+.comment-time{
+  font-size: smaller;
+}
+
 #photo{
   display: flex;
   justify-content: center;
@@ -57,4 +90,49 @@
   position: fixed;
   bottom: 0;
   margin-block-end: 50rpx;
+}
+
+.release {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  box-sizing: border-box;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 20rpx 12rpx;
+  background: #FFFFFF;
+}
+
+.release .text {
+  background: #F7F7F7;
+  border-radius: 8rpx;
+  width: 612rpx;
+  min-height: 40rpx;
+  max-height: 120rpx;
+  border-width: 10rpx 20rpx;
+  border-style: solid;
+  border-color: #F7F7F7;
+  line-height: 40rpx;
+  font-family: PingFangSC-Regular;
+  font-size: 28rpx;
+  color: #333333;
+}
+
+.release .submit {
+  width: 138rpx;
+  font-family: PingFangSC-Regular;
+  font-size: 32rpx;
+  color: #1B9AF4;
+  text-align: center;
+  height: 64rpx;
+  line-height: 60rpx;
+}
+
+.input_null {
+  margin-left: 12rpx;
+  font-family: PingFangSC-Regular;
+  font-size: 28rpx;
+  color: #939393;
 }
