--- a/chejing/pages/chejing/index.wxss
+++ b/chejing/pages/chejing/index.wxss
@@ -46,15 +46,16 @@
 .comments-view{
   width: 80%;
   padding: 10rpx 30rpx !important;
-  margin-left: 30rpx;
+  margin: 0 auto;
 }
 
 .comment-content{
-  font-size: small;
+  font-size: 11pt;
 }
 
 .comment-time{
-  font-size: smaller;
+  font-size: 9pt;
+  color: #939393;
 }
 
 #photo{
